# simpleNES-py

./: .gitignore  README.md  pyproject.toml
benchmarks/: __init__.py  conftest.py  test_bench_ppu.py  test_bench_scheduler.py
docs/: architecture.md
docs/design/: phase-0-1-implementation-design.md  phase-2-cpu-implementation-design.md  phase-3-ppu-registers-design.md  phase-4-background-design.md  phase-5-sprites-design.md  phase-6-frontend-design.md  phase-7-apu-design.md  phase-8-mapper1-design.md  phase-8-mapper2-design.md  phase-8-mapper3-design.md  phase-8-mapper4-design.md  phase-9-performance-design.md  phase-9b-further-optimizations.md  phase-9c-performance-60fps.md  phase-9d-performance-60fps.md  phase-9e-performance-60fps.md  phase-9f-cython-cpu.md
scripts/: build_cython.py
src/simplenes/: __main__.py  cli.py  errors.py  interrupts.py  machine.py  scheduler.py  timing.py
src/simplenes/apu/: __init__.py  apu.py  envelope.py  frame_counter.py  length_counter.py  mixer.py  noise.py  pulse.py  triangle.py
tests/fixtures/: nestest_helper.py  nrom_sample.py
tests/integration/: test_machine.py  test_nestest.py
tests/unit/: test_apu.py  test_cartridge.py  test_cpu.py  test_cpu_bus.py  test_cpu_cy_smoke.py  test_cpu_interrupts.py  test_errors.py  test_frontend.py  test_interrupts.py  test_mapper.py  test_mapper2.py  test_mapper3.py  test_mmc1.py  test_mmc3.py  test_oam_dma.py  test_ppu_background.py  test_ppu_bus.py  test_ppu_bus_cy_smoke.py  test_ppu_cy_smoke.py  test_ppu_registers.py  test_ppu_sprites.py  test_pygame_frontend.py
(+26 files in other folders)
