[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simplenes"]

[project]
name = "simplenes-py"
version = "0.1.0"
description = "A NES emulator implemented in Python"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
simplenes = "simplenes.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]
frontend = [
    "pygame>=2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
